# Self-Organization-Tree-Reproduction

./: .gitignore  CMakeLists.txt  README.md
Resources/: res.qrc
Resources/Shaders/: basicGeometry.frag  basicGeometry.vert  coordinate.frag  coordinate.vert  model.frag  model.vert  pureColor.frag  pureColor.vert
Sources/: OGLAdapter.cpp  main.cpp  mainwindow.cpp  res.qrc
Sources/DataStructures/: BoundingBox.cpp  Range.cpp  Vector.cpp
Sources/DataStructures/Headers/: BoundingBox.h  Range.h  Types.h  Vector.h
Sources/Forms/: mainwindow.ui
Sources/Headers/: OGLAdapter.h  mainwindow.h
Sources/Managers/: Camera.cpp  ResourceManager.cpp  ShaderManager.cpp  TextureManager.cpp
Sources/Objects/: BasicGeometry.cpp  Light.cpp  Model.cpp  TreeSkeleton.cpp  TreeSkeleton.h
Sources/Objects/Headers/: BasicGeometry.h  Light.h  Model.h
Sources/TreeStructures/: MarkerSet.cpp  Metamer.cpp  Tree.cpp  TreeModeler.cpp
Sources/TreeStructures/Headers/: Environment.h  MarkerSet.h  Metamer.h  Tree.h  TreeModeler.h
Sources/Utils/: BaseAlgorithms.cpp  ResourceManager.cpp  ShaderManager.cpp  TextureManager.cpp
Sources/Utils/Headers/: BaseAlgorithms.h  Camera.h  ResourceManager.h  ShaderManager.h  TextureManager.h
